--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 				<h2>Tous les évènements</h2>
 				<div class="actionsWrap actionsStyle">
 					<span id="activateFilters" class="action">Appliquer les filtres</span>
+					<span id="resetFilters" class="action">Enlever tous les filtres</span>
 				</div>
 				<div class="filtersWrap">
 				  <div class="filters-tags-row tags-wrap"> <!-- Static Content dynamically added on load--></div>
