--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:800' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="/css/meyer.css">
+	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/css/jscrollpane.css">
+	<link rel="stylesheet" href="/css/waves.min.css">
 	<link rel="stylesheet" href="/css/fontello/css/fontello.css">
 	<link rel="stylesheet" href="/css/hint.css">
 	<link rel="stylesheet" href="/css/style.css">
@@ -19,7 +20,6 @@
 	<div class="overlayMsgWrap">
 		<h2> Bienvenue sur Bamboo Nights </h2>
 	</div>	
-
 </div>
 	<header>
 		<h1>Night Friends</h1>
@@ -208,6 +208,7 @@
 		<script src="/js/jscrollpane.js"></script>
 		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js"></script>		
 		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.ui.min.js"></script>
+		<script src="/js/waves.js"></script>
 
 		<<!--> Application script </!-->
 		<script src="/js/lj.js"></script>
