--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
 						<label for="eventMaxGuest">Nombre d'invités </label>
 						<input id="eventMaxGuest" class="input-field_create" value = "3" max="100" min="2" type="number">
 					</div>
-					<div class="input-row-wrap tags-wrap">
-						<label for="name">Tags</label>
+					<div class="input-row-wrap">
+						<label for="tags">Tags</label>
+						<div class="tags-wrap"></div>
 					</div>
 					<div class="input-row-wrap">
 					<label for="eventDescription">About</label>
