--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>	
 </div>
 <div class="progress_bar"></div>
-<div class="loaderWrap"> <img class="loader" src="/img/ajax-loader-black.gif"></div>
+<div class="loaderWrap"> <img class="loader" src="img/ajax-loader-black.gif"></div>
 	<header>
 		<h1>We Nighters</h1>
 		<img src="img/bamboo-black.png" height="27">
@@ -99,7 +99,7 @@
 			<section id="profileWrap" class="none centered">
 				<h2>Account settings</h2>
 				<div id="pictureWrap"class="left hint--left" data-hint="click to edit your picture">
-					<img src="/img/person-placeholder.jpg" class="mainPicture" width="150">
+					<img src="img/person-placeholder.jpg" class="mainPicture" width="150">
 					<form class="upload_form"></form>
 					<h5 id="codebarre"><span class="icon icon-barcode"></span>53ef548dgk0847j6H7Y</h5>
 				</div>
