--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		<footer>
 		</footer>
 
-		<<!--> Third party libraries </!-->
+		<!--> Third party libraries </!-->
 		<script src="/js/jquery.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/jquery.cloudinary.js"></script>
@@ -224,7 +224,7 @@
 		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.ui.min.js"></script>
 		<script src="/js/waves.js"></script>
 
-		<<!--> Application script </!-->
+		<!--> Application script </!-->
 		<script src="/js/lj.js"></script>
 	</body>
 	</html>
