--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<h2>Account settings</h2>
 				<div id="pictureWrap"class="left hint--left" data-hint="click to edit your picture">
 					<form class="upload_form"></form>
-					<h5 id="codebarre"><span class="icon icon-barcode"></span>53ef548dgk0847j6H7Y</h5>
+					<h5 id="codebarre"><span class="icon icon-barcode-1"></span>53ef548dgk0847j6H7Y</h5>
 				</div>
 				<div class="fieldsWrap left">
 					<div class="input-row-wrap">
@@ -181,6 +181,8 @@
 					<span id="suspendEvent" class="action">Suspendre </span>
 				</div>
 				<div id="askersListWrap">
+					<div id="askersItemsDetails"></div>
+					<div id="askersItemsThumbs"></div>
 				</div>
 			</section>
 			<section id="settingsWrap" class="none centered">
@@ -226,14 +228,13 @@
 		<footer>
 		</footer>
 
-		<script src="/js/jquery.js"></script>
+		<script src="/js/lib/jquery.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
-		<script src="/js/jquery.cloudinary.js"></script>
-		<script src="/js/lodash.js"></script>
-		<script src="/js/jscrollpane.js"></script>
+		<script src="/js/lib/jquery.cloudinary.js"></script>
+		<script src="/js/lib/lodash.js"></script>
+		<script src="/js/lib/jscrollpane.js"></script>
 		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.min.js"></script>		
 		<script src="//cdn.jsdelivr.net/velocity/1.1.0/velocity.ui.min.js"></script>
-		<script src="/js/waves.js"></script>
 
 		<script src="/js/lj.js"></script>
 	</body>
